--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkulator Suhu</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <div class="container">
@@ -26,6 +26,6 @@
         <p>Cara Menghitung:</p>
         <div id="cara"></div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
